tests/valid/definite/RealSub_Valid_1.whiley
real f(real x) where x >= 0.2345 && $ < -0.2:
    return (0.0 - x)

void System::main([string] args):
    print str(f(1.234))
